<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iCrave</string>
    <string name="action_portion_sizes">Portion Sizes</string>
    <string name="action_consent">Consent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="image_info">"Imagine the description for the 10 seconds"</string>
    <string name="info">Info</string>
    <string name="choose">Choose</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="rate_the_image">How vividly did you imagine this image</string>
    <string name="craving_decision">Craving Decision</string>
    <string name="save">Save</string>
    <string name="healthy_snack">Healthy Snack</string>
    <string name="unhealthy_snack">Unhealthy Snack</string>
    <string name="show_another_image">Show another image</string>
    <string name="undo_previous_activity">Undo previous activity</string>
    <string name="undo">Undo</string>
    <string name="seconds">seconds remaining</string>
    <string name="rating_no_image">No image</string>
    <string name="rating_perfect_image">Perfect image</string>
    <string name="error_no_rating">Please rate the image before continuing</string>
    <string name="error_icrave_disabled">Please wait %1$s minutes before using iCrave or Undo your previous action</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_are_you_sure">Are you sure?</string>
    <string name="title_activity_consent">Consent</string>
    <string name="title_activity_portion_sizes">Portion Sizes</string>
    <string name="refresh">Refresh</string>
    <string name="synchronise">Synchronise</string>
    <string name="visualise">Visualise</string>
    <string name="title_activity_icrave_options">iCrave Options</string>
    <string name="sync_result_msg">Successfully synced %1$s of %2$s</string>
    <string name="could_not_sync_msg">Could not sync at this time, please try later.</string>
    <string name="nothing_to_sync_msg">Nothing to sync</string>
    <string name="cannot_connect_to_server">Cannot connect to server</string>
    <string name="total_cravings_colon">Total Cravings:</string>
    <string name="saved_cravings_colon">Saved Cravings:</string>
    <string name="healthy_snacks_colon">Healthy Snacks:</string>
    <string name="unhealthy_snacks_colon">Unhealthy Snacks:</string>
    <string name="zero">0</string>
    <string name="help_me_resist">Help me resist</string>
    <string name="save_for_later">Save for later</string>
    <string name="need_another_task">Need another task</string>
    <string name="title_activity_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_no_email">Please provide an email address</string>
    <string name="error_wrong_email_format">Please provide a valid email address</string>
    <string name="error_no_password">Please provide a password</string>
    <string name="error_wrong_password_format">Please provide a valid password</string>
    <string name="error_server_not_available">Server not available. Please try again later.</string>
    <string name="msg_login_successful">Login successful</string>
    <string name="msg_login_unsuccessful">Please enter a valid email address and password</string>
    <string name="msg_register_successful">Registration successful</string>
    <string name="msg_register_unsuccessful">Registration failed</string>
    <string name="msg_register_email_taken">The email address provided is already registered</string>
    <string name="msg_login_to_continue">Please Login to continue</string>
    <string name="msg_nothing_to_sync">Nothing to sync</string>
    <string name="msg_register_access_code_incorrect">Please provide a valid access code</string>
    <string name="access_code">Access code</string>
    <string name="provide_access_code_to_proceed">Please provide an access code to proceed with registration</string>

</resources>
