<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.aqib.icrave.controller.ResultActivity$PlaceholderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/rate_the_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating"
            android:layout_marginTop="17dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:clickable="false"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_no_image"
            android:id="@+id/textView3"
            android:singleLine="false"
            android:layout_below="@+id/rating"
            android:layout_toLeftOf="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_perfect_image"
            android:id="@+id/textView4"
            android:layout_alignTop="@+id/textView3"
            android:layout_toRightOf="@+id/linearLayout" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout"
            android:weightSum="1"
            android:minWidth="20dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/craving_decision"
                android:layout_below="@+id/rating"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="39dp"
                android:id="@+id/textView2"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <Button
                style="@style/btnStyleGreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_save"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:longClickable="false"
                android:text="Save for later" />

            <Button
                style="@style/btnStyleYellow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_healthy_snack"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button_save"
                android:layout_centerHorizontal="true"
                android:text="Healthy Snack" />

            <Button
                style="@style/btnStyleOrange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_unhealthy_snack"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/button_healthy_snack"
                android:layout_centerHorizontal="true"
                android:text="Unhealthy Snack" />

            <Button
                style="@style/btnStyleBlue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/need_another_task"
                android:id="@+id/button_another_image"
                android:layout_below="@+id/button_unhealthy_snack"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
